tests/suite/snapshots/suite__parse__tests__parse__bad-array-return.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad-array-return.xi:1:8]
   │
 1 │ foo(): int[1] {}
   ·        ───┬──  
   ·           ╰──── Unexpected length in array type
───╯

